welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value and is not a member of Boolean
  if (vacation==true){if (day<=5 and 1<=day){r eturn "10.00"} else {return "off"}}
                                 ^alarmClock:2: error: not found: value r
  if (vacation==true){if (day<=5 and 1<=day){r eturn "10.00"} else {return "off"}}
                                             ^alarmClock:3: error: value and is not a member of Boolean
  if (day<=5 and 1<=day){return "7.00"}
             ^