welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (vacation==true){if (day<=5 and 1<=day){r eturn "10.00"} else {return "off"}}
  if (day<=5 and 1<=day){return "7.00"}
  return "10.00"}